# baseball_travels

./: BaseballTrip - Technology Review.pptx  LICENSE  README.md  Schedule Scraping.ipynb  app.py  environment.yml  final_mlb_schedule.csv  pyproject.toml  pythonTSPexample.ipynb  requirements.txt  route_creator.ipynb
.github/workflows/: build_test.yml
data/: README.md  cost_df.csv  create_cost_matrix.py  mlb_locations.csv  mlb_schedule.csv  team_airport_key.csv
docs/: BaseballTrip - Technology Review.pptx  Component_Spec.md  Functional_Spec.md  Milestones.md  UserStories.md
examples/: README.md
makeRoute/: distance.py  exhaustiveSearch.py  makeRoute.py
make_route/: README.md  distance.py  exhaustive_search.py
notebooks/: Flight_cost_Matrix_AB-3.ipynb  Flight_cost_Matrix_AB.ipynb  MLRose Package exploration.ipynb  Schedule Scraping.ipynb  pythonTSPexample.ipynb  route_creator.ipynb
tests/: README.md  test_app.py  test_distance.py  test_makeRoute.py  test_search.py
ttw/: pyvenv.cfg
