[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball_travel"
version = "0.0.1"
authors = [
    {name = "Alexander Schad"},
    {name = "Timothy Tan"},
    {name = "Ananya Bajaj"},
]
description = "MLB Traveling example"
readme = "README.md"
requires-python = ">=3.8"

license = {text = "BSD-3-Clause"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

# In conjunction with the "dynamic" option above in the "project"
# section, this tells the build system to add any dependencies
# specified in requirements.txt.
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Where can someone find out more about your project?
[project.urls]
Homepage = "https://github.com/ttan06/baseball_travels"
Issues = "https://github.com/ttan06/baseball_travels/issues"